# Vulkcmm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dependencies.cmake  ProjectOptions.cmake  README.md  azure-pipelines.yml  compile.bat  premake5.lua  vulkancmake.vcxproj  vulkancmake.vcxproj.filters  vulkcmm.sln
.github/: constants.env  pull_request_template.md
.github/workflows/: auto-clang-format.yml  ci.yml  msbuild.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/Vulkcmm/: sample_library.hpp
shaders/: vert.vert
src/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  Device.cpp  Keyboard_movement_controller.cpp  Keyboard_movement_controller.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Simple_render_system.cpp  Swap_chain.h  Window.cpp  casts.h  first_app.cpp  first_app.hpp  headers.h  keyboard_movement_controller.hpp  lve_buffer.cpp  lve_buffer.hpp  lve_camera.cpp  lve_camera.hpp  lve_device.cpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp  main.cpp  (+2 more)
src/ftxui_sample/: CMakeLists.txt  Timer.h  headers.h  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/vulkcmmsrc/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  Device.cpp  Device.h  FPSCounter.h  Game_object.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Simple_render_system.cpp  Simple_render_system.h  Swap_chain.cpp  Swap_chain.h  Timer.h  VKRAppError.h  Window.cpp  Window.h  casts.h  headers.h  main.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
